add spark code